==> bodri/kapukiTRX-fw-trx/telemetry/orientation/bno055.cpp <==
#include "bno055.h"
#include "main.h"
#include "i2c.h"
#include <limits.h>
#include <math.h>

bool BNO055::begin(bno055_opmode_t mode) {
	/* Make sure we have the right device */
	uint8_t id = read8(BNO055_CHIP_ID_ADDR);
	if (id != BNO055_ID) {
		HAL_Delay(1000); // hold on for boot
		id = read8(BNO055_CHIP_ID_ADDR);
		if (id != BNO055_ID) {
			return false; // still not? ok bail
		}
	}

	/* Switch to config mode (just in case since this is the default) */
	setMode(OPERATION_MODE_CONFIG);

	/* Reset */
	write8(BNO055_SYS_TRIGGER_ADDR, 0x20);
	/* Delay incrased to 30ms due to power issues https://tinyurl.com/y375z699 */
	HAL_Delay(30);
	while (read8(BNO055_CHIP_ID_ADDR) != BNO055_ID) {
		HAL_Delay(10);
	}
	HAL_Delay(50);

	/* Set to normal power mode */
	write8(BNO055_PWR_MODE_ADDR, POWER_MODE_NORMAL);
	HAL_Delay(10);

	write8(BNO055_PAGE_ID_ADDR, 0);

	/* Set the output units */
	/*
	 uint8_t unitsel = (0 << 7) | // Orientation = Android
	 (0 << 4) | // Temperature = Celsius
	 (0 << 2) | // Euler = Degrees
	 (1 << 1) | // Gyro = Rads
	 (0 << 0);  // Accelerometer = m/s^2
	 write8(BNO055_UNIT_SEL_ADDR, unitsel);
	 */

	/* Configure axis mapping (see section 3.4) */
	/*
	 write8(BNO055_AXIS_MAP_CONFIG_ADDR, REMAP_CONFIG_P2); // P0-P7, Default is P1
	 HAL_Delay(10);
	 write8(BNO055_AXIS_MAP_SIGN_ADDR, REMAP_SIGN_P2); // P0-P7, Default is P1
	 HAL_Delay(10);
	 */

	write8(BNO055_SYS_TRIGGER_ADDR, 0x0);
	HAL_Delay(10);
	/* Set the requested operating mode (see section 3.3) */
	setMode(mode);
	HAL_Delay(20);

	return true;
}

void BNO055::setMode(bno055_opmode_t mode) {
	mode = mode;
	write8(BNO055_OPR_MODE_ADDR, mode);
	HAL_Delay(30);
}

void BNO055::setExtCrystalUse(bool usextal) {
	bno055_opmode_t modeback = mode;

	/* Switch to config mode (just in case since this is the default) */
	setMode(OPERATION_MODE_CONFIG);
	HAL_Delay(25);
	write8(BNO055_PAGE_ID_ADDR, 0);
	if (usextal) {
		write8(BNO055_SYS_TRIGGER_ADDR, 0x80);
	} else {
		write8(BNO055_SYS_TRIGGER_ADDR, 0x00);
	}
	HAL_Delay(10);
	/* Set the requested operating mode (see section 3.3) */
	setMode(modeback);
	HAL_Delay(20);
}

imu::Vector<3> BNO055::getVector(vector_type_t vector_type) {
	imu::Vector<3> xyz;
	uint8_t buffer[6];
	memset(buffer, 0, 6);

	int16_t x, y, z;
	x = y = z = 0;

	/* Read vector data (6 bytes) */
	readLen((bno055_reg_t) vector_type, buffer, 6);

	x = ((int16_t) buffer[0]) | (((int16_t) buffer[1]) << 8);
	y = ((int16_t) buffer[2]) | (((int16_t) buffer[3]) << 8);
	z = ((int16_t) buffer[4]) | (((int16_t) buffer[5]) << 8);

	/*!
	 * Convert the value to an appropriate range (section 3.6.4)
	 * and assign the value to the Vector type
	 */
	switch (vector_type) {
	case VECTOR_MAGNETOMETER:
		/* 1uT = 16 LSB */
		xyz[0] = ((double) x) / 16.0;
		xyz[1] = ((double) y) / 16.0;
		xyz[2] = ((double) z) / 16.0;
		break;
	case VECTOR_GYROSCOPE:
		/* 1dps = 16 LSB */
		xyz[0] = ((double) x) / 16.0;
		xyz[1] = ((double) y) / 16.0;
		xyz[2] = ((double) z) / 16.0;
		break;
	case VECTOR_EULER:
		/* 1 degree = 16 LSB */
		xyz[0] = ((double) x) / 16.0;
		xyz[1] = ((double) y) / 16.0;
		xyz[2] = ((double) z) / 16.0;
		break;
	case VECTOR_ACCELEROMETER:
		/* 1m/s^2 = 100 LSB */
		xyz[0] = ((double) x) / 100.0;
		xyz[1] = ((double) y) / 100.0;
		xyz[2] = ((double) z) / 100.0;
		break;
	case VECTOR_LINEARACCEL:
		/* 1m/s^2 = 100 LSB */
		xyz[0] = ((double) x) / 100.0;
		xyz[1] = ((double) y) / 100.0;
		xyz[2] = ((double) z) / 100.0;
		break;
	case VECTOR_GRAVITY:
		/* 1m/s^2 = 100 LSB */
		xyz[0] = ((double) x) / 100.0;
		xyz[1] = ((double) y) / 100.0;
		xyz[2] = ((double) z) / 100.0;
		break;
	}

	return xyz;
}

bool BNO055::getSensorOffsets(uint8_t *calibData) {
	if (isFullyCalibrated()) {
		bno055_opmode_t lastMode = mode;
		setMode(OPERATION_MODE_CONFIG);

		readLen(ACCEL_OFFSET_X_LSB_ADDR, calibData,
				NUM_BNO055_OFFSET_REGISTERS);

		setMode(lastMode);
		return true;
	}
	return false;
}

bool BNO055::getSensorOffsets(adafruit_bno055_offsets_t &offsets_type) {
	if (isFullyCalibrated()) {
		bno055_opmode_t lastMode = mode;
		setMode(OPERATION_MODE_CONFIG);
		HAL_Delay(25);

		/* Accel offset range depends on the G-range:
		 +/-2g  = +/- 2000 mg
		 +/-4g  = +/- 4000 mg
		 +/-8g  = +/- 8000 mg
		 +/-1§g = +/- 16000 mg */
		offsets_type.accel_offset_x = (read8(ACCEL_OFFSET_X_MSB_ADDR) << 8)
				| (read8(ACCEL_OFFSET_X_LSB_ADDR));
		offsets_type.accel_offset_y = (read8(ACCEL_OFFSET_Y_MSB_ADDR) << 8)
				| (read8(ACCEL_OFFSET_Y_LSB_ADDR));
		offsets_type.accel_offset_z = (read8(ACCEL_OFFSET_Z_MSB_ADDR) << 8)
				| (read8(ACCEL_OFFSET_Z_LSB_ADDR));

		/* Magnetometer offset range = +/- 6400 LSB where 1uT = 16 LSB */
		offsets_type.mag_offset_x = (read8(MAG_OFFSET_X_MSB_ADDR) << 8)
				| (read8(MAG_OFFSET_X_LSB_ADDR));
		offsets_type.mag_offset_y = (read8(MAG_OFFSET_Y_MSB_ADDR) << 8)
				| (read8(MAG_OFFSET_Y_LSB_ADDR));
		offsets_type.mag_offset_z = (read8(MAG_OFFSET_Z_MSB_ADDR) << 8)
				| (read8(MAG_OFFSET_Z_LSB_ADDR));

		/* Gyro offset range depends on the DPS range:
		 2000 dps = +/- 32000 LSB
		 1000 dps = +/- 16000 LSB
		 500 dps = +/- 8000 LSB
		 250 dps = +/- 4000 LSB
		 125 dps = +/- 2000 LSB
		 ... where 1 DPS = 16 LSB */
		offsets_type.gyro_offset_x = (read8(GYRO_OFFSET_X_MSB_ADDR) << 8)
				| (read8(GYRO_OFFSET_X_LSB_ADDR));
		offsets_type.gyro_offset_y = (read8(GYRO_OFFSET_Y_MSB_ADDR) << 8)
				| (read8(GYRO_OFFSET_Y_LSB_ADDR));
		offsets_type.gyro_offset_z = (read8(GYRO_OFFSET_Z_MSB_ADDR) << 8)
				| (read8(GYRO_OFFSET_Z_LSB_ADDR));

		/* Accelerometer radius = +/- 1000 LSB */
		offsets_type.accel_radius = (read8(ACCEL_RADIUS_MSB_ADDR) << 8)
				| (read8(ACCEL_RADIUS_LSB_ADDR));

		/* Magnetometer radius = +/- 960 LSB */
		offsets_type.mag_radius = (read8(MAG_RADIUS_MSB_ADDR) << 8)
				| (read8(MAG_RADIUS_LSB_ADDR));

		setMode(lastMode);
		return true;
	}
	return false;
}

void BNO055::setSensorOffsets(const uint8_t *calibData) {
	bno055_opmode_t lastMode = mode;
	setMode(OPERATION_MODE_CONFIG);
	HAL_Delay(25);

	/* Note: Configuration will take place only when user writes to the last
	 byte of each config data pair (ex. ACCEL_OFFSET_Z_MSB_ADDR, etc.).
	 Therefore the last byte must be written whenever the user wants to
	 changes the configuration. */

	/* A writeLen() would make this much cleaner */
	write8(ACCEL_OFFSET_X_LSB_ADDR, calibData[0]);
	write8(ACCEL_OFFSET_X_MSB_ADDR, calibData[1]);
	write8(ACCEL_OFFSET_Y_LSB_ADDR, calibData[2]);
	write8(ACCEL_OFFSET_Y_MSB_ADDR, calibData[3]);
	write8(ACCEL_OFFSET_Z_LSB_ADDR, calibData[4]);
	write8(ACCEL_OFFSET_Z_MSB_ADDR, calibData[5]);

	write8(MAG_OFFSET_X_LSB_ADDR, calibData[6]);
	write8(MAG_OFFSET_X_MSB_ADDR, calibData[7]);
	write8(MAG_OFFSET_Y_LSB_ADDR, calibData[8]);
	write8(MAG_OFFSET_Y_MSB_ADDR, calibData[9]);
	write8(MAG_OFFSET_Z_LSB_ADDR, calibData[10]);
	write8(MAG_OFFSET_Z_MSB_ADDR, calibData[11]);

	write8(GYRO_OFFSET_X_LSB_ADDR, calibData[12]);
	write8(GYRO_OFFSET_X_MSB_ADDR, calibData[13]);
	write8(GYRO_OFFSET_Y_LSB_ADDR, calibData[14]);
	write8(GYRO_OFFSET_Y_MSB_ADDR, calibData[15]);
	write8(GYRO_OFFSET_Z_LSB_ADDR, calibData[16]);
	write8(GYRO_OFFSET_Z_MSB_ADDR, calibData[17]);

	write8(ACCEL_RADIUS_LSB_ADDR, calibData[18]);
	write8(ACCEL_RADIUS_MSB_ADDR, calibData[19]);

	write8(MAG_RADIUS_LSB_ADDR, calibData[20]);
	write8(MAG_RADIUS_MSB_ADDR, calibData[21]);

	setMode(lastMode);
}

void BNO055::setSensorOffsets(const adafruit_bno055_offsets_t &offsets_type) {
	bno055_opmode_t lastMode = mode;
	setMode(OPERATION_MODE_CONFIG);
	HAL_Delay(25);

	/* Note: Configuration will take place only when user writes to the last
	 byte of each config data pair (ex. ACCEL_OFFSET_Z_MSB_ADDR, etc.).
	 Therefore the last byte must be written whenever the user wants to
	 changes the configuration. */

	write8(ACCEL_OFFSET_X_LSB_ADDR, (offsets_type.accel_offset_x) & 0x0FF);
	write8(ACCEL_OFFSET_X_MSB_ADDR, (offsets_type.accel_offset_x >> 8) & 0x0FF);
	write8(ACCEL_OFFSET_Y_LSB_ADDR, (offsets_type.accel_offset_y) & 0x0FF);
	write8(ACCEL_OFFSET_Y_MSB_ADDR, (offsets_type.accel_offset_y >> 8) & 0x0FF);
	write8(ACCEL_OFFSET_Z_LSB_ADDR, (offsets_type.accel_offset_z) & 0x0FF);
	write8(ACCEL_OFFSET_Z_MSB_ADDR, (offsets_type.accel_offset_z >> 8) & 0x0FF);

	write8(MAG_OFFSET_X_LSB_ADDR, (offsets_type.mag_offset_x) & 0x0FF);
	write8(MAG_OFFSET_X_MSB_ADDR, (offsets_type.mag_offset_x >> 8) & 0x0FF);
	write8(MAG_OFFSET_Y_LSB_ADDR, (offsets_type.mag_offset_y) & 0x0FF);
	write8(MAG_OFFSET_Y_MSB_ADDR, (offsets_type.mag_offset_y >> 8) & 0x0FF);
	write8(MAG_OFFSET_Z_LSB_ADDR, (offsets_type.mag_offset_z) & 0x0FF);
	write8(MAG_OFFSET_Z_MSB_ADDR, (offsets_type.mag_offset_z >> 8) & 0x0FF);

	write8(GYRO_OFFSET_X_LSB_ADDR, (offsets_type.gyro_offset_x) & 0x0FF);
	write8(GYRO_OFFSET_X_MSB_ADDR, (offsets_type.gyro_offset_x >> 8) & 0x0FF);
	write8(GYRO_OFFSET_Y_LSB_ADDR, (offsets_type.gyro_offset_y) & 0x0FF);
	write8(GYRO_OFFSET_Y_MSB_ADDR, (offsets_type.gyro_offset_y >> 8) & 0x0FF);
	write8(GYRO_OFFSET_Z_LSB_ADDR, (offsets_type.gyro_offset_z) & 0x0FF);
	write8(GYRO_OFFSET_Z_MSB_ADDR, (offsets_type.gyro_offset_z >> 8) & 0x0FF);

	write8(ACCEL_RADIUS_LSB_ADDR, (offsets_type.accel_radius) & 0x0FF);
	write8(ACCEL_RADIUS_MSB_ADDR, (offsets_type.accel_radius >> 8) & 0x0FF);

	write8(MAG_RADIUS_LSB_ADDR, (offsets_type.mag_radius) & 0x0FF);
	write8(MAG_RADIUS_MSB_ADDR, (offsets_type.mag_radius >> 8) & 0x0FF);

	setMode(lastMode);
}

bool BNO055::write8(bno055_reg_t reg, uint8_t value) {
//  _wire->beginTransmission(_address);
//#if ARDUINO >= 100
//  _wire->write((uint8_t)reg);
//  _wire->write((uint8_t)value);
//#else
//  _wire->send(reg);
//  _wire->send(value);
//#endif
//  _wire->endTransmission();

	if (HAL_I2C_Mem_Write(&hi2c1, i2cAddress, reg, 1, &value, 1, 1000)
			== HAL_OK) {
	}

	/* ToDo: Check for error! */
	return true;
}

uint8_t BNO055::read8(bno055_reg_t reg) {
	uint8_t value = 0;

//  _wire->beginTransmission(_address);
//#if ARDUINO >= 100
//  _wire->write((uint8_t)reg);
//#else
//  _wire->send(reg);
//#endif
//  _wire->endTransmission();
//  _wire->requestFrom(_address, (byte)1);
//#if ARDUINO >= 100
//  value = _wire->read();
//#else
//  value = _wire->receive();
//#endif

	if (HAL_I2C_Mem_Read(&hi2c1, i2cAddress, reg, 1, &value, 1, 1000)
			== HAL_OK) {
	}

	return value;
}

bool BNO055::readLen(bno055_reg_t reg, uint8_t *buffer, uint8_t len) {
//  _wire->beginTransmission(_address);
//#if ARDUINO >= 100
//  _wire->write((uint8_t)reg);
//#else
//  _wire->send(reg);
//#endif
//  _wire->endTransmission();
//  _wire->requestFrom(_address, (byte)len);
//
//  for (uint8_t i = 0; i < len; i++) {
//#if ARDUINO >= 100
//    buffer[i] = _wire->read();
//#else
//    buffer[i] = _wire->receive();
//#endif
//  }

	if (HAL_I2C_Mem_Read(&hi2c1, i2cAddress, reg, 1, buffer, len, 1000)
			== HAL_OK) {
	}

	/* ToDo: Check for errors! */
	return true;
}
